--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -52,7 +52,7 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-       <div class="showPage slimForm col-md-9">
+       <div class="showPage newPage col-md-9">
             <div class="row">
             <div class="col-md-12">
             <div class="row">
@@ -268,7 +268,7 @@
                                     <li ng-repeat="custom in customfields" class="newItems"  >
                                     <span>
                                     <%= custom.field%>  : <%= custom.value%> 
-                                    <a id="custom_<%=$index%>" href="" ng-click="pullElement($index,custom,customfields)" class="removeItem">x</a>
+                                    <a id="custom_<%=$index%>" href="" ng-click="pullElement($index,custom,customfields)" class="xremoveItem">x</a>
                                     </span>
 
                                     </li>
