--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -5,40 +5,13 @@
      <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
       {{active_app.label}}
     </h2>
-        <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount">  
-         <a href="/#/accounts/new" class="btn red hidden afterScrollBtn">
-                        New Account 
+      <div class="filterOptions">
+        <span role="button" class="filterItem activeFilter" ng-click="filterByOwner()">All Accounts</span>
+        <span role="button" class="filterItem" ng-click="filterByOwner('{{ME}}')">My Accounts</span>
+        <a href="/#/accounts/new" class="btn red afterScrollBtn hidden">
+           New Account 
          </a>
-      <div class="btn-group btn-filter">
-          <a class="btn btn-default" href="#" data-toggle="dropdown">
-              {{ _('Filter by') }}
-              <i class="icon-angle-down"></i>
-          </a>
-          <ul class="dropdown-menu">
-              <li>
-                <a  ng-click="filterByOwner()" href="#" data-toggle="modal">{{ _('All accounts') }}
-                </a>
-              </li>
-              <li>
-                <a ng-click="filterByOwner('{{ME}}')" href="#" data-toggle="modal">{{ _('My accounts') }}</a>
-              </li>
-          </ul>
       </div>
-      <div class="btn-group btn-sort">
-        <a class="btn btn-default" href="#" data-toggle="dropdown">
-          {{ _('Sort by') }}
-          <i class="icon-angle-down"></i>
-        </a>
-        <ul class="dropdown-menu">
-          <li>
-            <a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a>
-          </li>
-          <li>
-            <a ng-click="orderBy('name')" href="#" data-toggle="modal">{{ _('Name') }}</a>
-          </li>
-        </ul>
-      </div>
-    </div>
     </div> 
   </div>
 </div>
@@ -70,33 +43,19 @@
                     </div>
                     <div class="modal-body">
                        <form id="addAccount" name="addaccount"  class=""  ng-keyup="addAccountOnKey(account)"> 
-                              
-                  
-                    
-
                     <div class="form-group">
                         <label  class="required">{{_("Name")}}</label>
-                       
-                        
                           <input type="text" class="form-control" required  ng-model="account.name">
-                          
-                       
                     </div>
                     <div class="form-group">
                         <label  class="required">{{_("Type")}}</label>
-                       
-                       
-                         
+
                           <select value="Customer" ng-model="account.account_type" class="form-control"> 
                          <option value="Competitor">Competitor</option><option value="Customer">Customer</option><option value="Distributor">Distributor</option><option value="Integrator">Integrator</option><option value="Investor">Investor</option><option value="Partner">Partner</option><option value="Press">Press</option><option value="Prospect">Prospect</option><option value="Reseller">Reseller</option><option value="Supplier">Supplier</option><option value="Vendor">Vendor</option><option value="Other">Other</option></select>
-                          
-                       
                     </div>
                     <div class="form-group">
                         <label  class="required control-label">{{_("Industry")}} </label>
-                       
-                       
-                         
+
                           <select ng-model="account.industry" class="form-control">
                           <option value="">--None--</option><option value="Agriculture">Agriculture</option><option value="Apparel">Apparel</option><option value="Banking">Banking</option><option value="Biotechnology">Biotechnology</option><option value="Chemicals">Chemicals</option><option value="Communications">Communications</option><option value="Construction">Construction</option><option value="Consulting">Consulting</option><option value="Education">Education</option><option value="Electronics">Electronics</option><option value="Energy">Energy</option><option value="Engineering">Engineering</option><option value="Entertainment">Entertainment</option><option value="Environmental">Environmental</option><option value="Finance">Finance</option><option value="Food &amp; Beverage">Food &amp; Beverage</option><option value="Government">Government</option><option value="Healthcare">Healthcare</option><option value="Hospitality">Hospitality</option><option value="Insurance">Insurance</option><option value="Machinery">Machinery</option><option value="Manufacturing">Manufacturing</option><option value="Media">Media</option><option value="Not For Profit">Not For Profit</option><option value="Recreation">Recreation</option><option value="Retail">Retail</option><option value="Shipping">Shipping</option><option value="Technology">Technology</option><option value="Telecommunications">Telecommunications</option><option value="Transportation">Transportation</option><option value="Utilities">Utilities</option><option value="Other">Other</option></select>
                           
@@ -148,7 +107,7 @@
   </div>
   <div class="col-md-3 col-sm-3 col-xs-3">
       <div class="row">
-        <div class="pull-right" ng-show="!blankStateaccount"> 
+        <div class="pull-right"> 
          <a href="/#/accounts/new" class="btn red newBtn">
                         New Account 
          </a>
