--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -124,7 +124,7 @@
                             <option>{{_('other')}}</option>
                           </select>
                         </div>
-                        <button type="submit" ng-click="pushElement(phone,phones)" class="btn blue jfk-button jfk-button-action">Add</button>
+                        <button type="submit" ng-click="pushElement(phone,phones,'phones')" class="btn blue jfk-button jfk-button-action">Add</button>
                         <button type="submit" class="btn btn-default" ng-click="showPhoneForm=false">X</button>
                       </form>
                     </div>
@@ -158,7 +158,7 @@
                           <label class="sr-only" for="exampleInputEmail2">Email</label>
                           <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a number">
                         </div>
-                        <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email,emails)" >Add</button>
+                        <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email,emails,'emails')" >Add</button>
                         <button type="submit" ng-click="showEmailForm=false" class="btn btn-default">X</button>
                       </form>
                     </div>
@@ -209,7 +209,7 @@
                             <label class="sr-only" for="exampleInputEmail2">Website</label>
                             <input type="text" ng-model="website.url" class="form-control" id="exampleInputEmail2" placeholder="Enter a Website">
                         </div>
-                        <button type="submit" ng-click="pushElement(website,websites)" class="btn blue jfk-button jfk-button-action">Add</button>
+                        <button type="submit" ng-click="pushElement(website,websites,'websites')" class="btn blue jfk-button jfk-button-action">Add</button>
                         <button type="submit" ng-click="showWebsiteForm=false" class="btn btn-default">X</button>
                       </form>
                     </div>
@@ -236,7 +236,7 @@
                           <label class="sr-only" for="exampleInputEmail2">Social link</label>
                           <input type="text" class="form-control" id="exampleInputEmail2" ng-model='sociallink.url' placeholder="Enter a social link">
                         </div>
-                        <button ng-click="pushElement(sociallink,sociallinks)" type="submit" class="btn blue jfk-button jfk-button-action">Add</button>
+                        <button ng-click="pushElement(sociallink,sociallinks,'sociallinks')" type="submit" class="btn blue jfk-button jfk-button-action">Add</button>
                         <button type="submit" ng-click="showSociallinkForm=false" class="btn btn-default">X</button>
                       </form>
                     </div>
@@ -303,7 +303,7 @@
                           <label class="sr-only" for="exampleInputEmail2">Value</label>
                           <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value">
                         </div>
-                        <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(customfield,customfields)">Add</button>
+                        <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(customfield,customfields,'customfields')">Add</button>
                         <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
                       </form>
                     </div>
@@ -394,7 +394,7 @@
       </div>
       <div class="modal-footer">
           <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-          <input  type="submit" ng-click="pushElement(address,addresses)" class="btn green" value="Add this address">
+          <input  type="submit" ng-click="pushElement(address,addresses,'addresses')" class="btn green" value="Add this address">
       </div>
     </div>
   </div>
