--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -612,51 +612,53 @@
     <div class="col-md-3 tasks-col">
       <div class="row">
         <div class="col-md-12">
-          <div class="portlet showCard">
-            <div class="portlet-title line">
-              <div class="caption">
-                <i class="fa fa-check"></i>Tasks
-              </div>
-            </div>
-            <div class="portlet-body" id="chats">
-              <div class="scroller" style="height:200x" data-always-visible="1" data-rail-visible="0">
-                <div id="newTask">
-                  <p><strong>Tasks:</strong></p>
-                  <ul id="tasks" class="list-unstyled">
-                    <li ng-repeat="task in tasks" id="task_<%=$index%>">
-                      <input value="check1" type="checkbox">
-                      <span>
-                        <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
-                          <%= task.title%>
-                        </a>
-                        <span ng-show="task.due">
-                          [before: <%= task.due | date:'yyyy-MM-dd '%>]
-                        </span>
-                      </span>
-                    </li>
-                    <li>
-                      <a href="#myModal" class="btn-link addAnotherPhone" data-toggle="modal">Add a new task</a>
-                    </li>
-                  </ul>
-                  <div class="newTask" ng-show="addingTask">
-                    <form ng-submit="addNewTask()" class="newTaskForm">
-                      <div class="form-group">
-                        <div class="input-icon right">
-                          <input taggable taggabledata="taggableOptions" ng-model="newTask.title" id="new_task_text" class="form-control"  placeholder="Add new task ..." autofocus/>
+          <div class="portlet showPage rightCardContent">
+                        <div class="portlet-title line">
+                          <div class="caption"> <i class="fa fa-check"></i>Related Tasks </div>
+
+                        </div>
+                        <div class="newContactform portlet-body" id="chats">
+                          <form class=" slimForm ng-pristine ng-invalid ng-invalid-required">
+                              <div class="formElements newTaskToLead" ng-show="newTaskform">
+                                        <div class="row">
+                                          <div class="col-md-12 margin-bottom-10">
+                                              <input ng-model="newTask.title" type="text" id="taskName" class="form-control" placeholder="Tilte">
+                                          </div>
+                                          <!--/span-->
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-12 margin-bottom-10">
+                                                  <datetimepick ng-model='newTask.due' placeholder="Add a due date" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                            </div>
+                                        </div>   
+                                        <div class="row">
+                                            <div class="col-md-12 margin-bottom-10">
+                                                  <datetimepick icon-class='fa fa-bell-o' ng-model='newTask.reminder' placeholder="Add a reminder" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                            </div>
+                                        </div>   
+                              </div>
+                              <div class="row">
+                                  <div class="col-md-12 margin-top-10">
+                                      <p><span ng-hide="newTaskform">Add New Task</span><button type="button" ng-click="addTask(newTask)" class="btn blue btn-sm pull-right btn-inline">Add</button></p>
+                                       
+                                  </div>
+                              </div>      
+                          </form>
+                           <ul id="tasks" class="list-unstyled lead_related_tasks" ng-hide="newTaskform">
+                              <li ng-repeat="task in tasks" id="task_<%=$index%>">
+                                <input value="check1" type="checkbox">
+                                <span>
+                                  <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
+                                    <%= task.title%>
+                                  </a>
+                                  <span ng-show="task.due">
+                                    [before: <%= task.due | date:'yyyy-MM-dd '%>]
+                                  </span>
+                                </span>
+                              </li>
+                          </ul>
                         </div>
                       </div>
-                    </form>
-                    <div>
-                      <div class="newTask-meta pull-right">
-                        <datetimepick icon-class='fa fa-bell-o' label-format='MMM d, h:mm a' ng-model='newTask.reminder' class="new-task-reminder pull-right"></datetimepick>
-                        <datetimepick ng-model='newTask.due' class="new-task-date pull-right" label-format='MMM d, h:mm a'></datetimepick>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <!-- $ Events -->
