--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
         <!-- BEGIN TOP NAVIGATION MENU -->
 
         <ul class="nav navbar-nav pull-right">
-              <li class="dropdown user">
+              <li class="dropdown user chrome-ext">
 	                <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
               </li>
               <li class="dropdown user">
@@ -110,7 +110,7 @@
                   </span>
                 </a>
               </li>
-              <li class="dropdown user" id="header_task_bar">
+              <li class="dropdown user app-menu" id="header_task_bar">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true" >
                 <img alt="" src="static/bootstrap3/img/glyphicons_156_show_thumbnails.png" width="18">
                   <span class="username">
@@ -374,6 +374,16 @@
    <link href="static/angular-xeditable-0.1.8/css/xeditable.css" rel="stylesheet">
   <script src="static/angular-xeditable-0.1.8/js/xeditable.js"></script>
    <script src="static/app/scripts/vendor/ui-select2.js" ></script>
+   <script type="text/javascript">
+      function isMobile() {
+          var index = navigator.appVersion.indexOf("Mobile");
+          return (index > -1);
+        }
+        if (isMobile()) {
+          $(".chrome-ext").addClass("hidden");
+          $(".app-menu").addClass("hidden");
+        }
+   </script>
   <script type="text/javascript">
     var apisToLoad;
     var callback = function() {
